10741 - fixed vertical alignment and opacity of dropdown chevron

--- a/src/_scss/components/tempSearchPage/_tempSearchSectionWrapper.scss
+++ b/src/_scss/components/tempSearchPage/_tempSearchSectionWrapper.scss
@@ -62,6 +62,8 @@
 
             .filter__dropdown-chevron svg {
               color: $blue-50;
+              opacity: 1;
+              vertical-align: middle;
             }
           }
 
